# AppleVideoJawn

./: LICENSE.txt  README.md  pyproject.toml
src/video_jawn/: __about__.py  __init__.py  __main__.py  coordinator.py
src/video_jawn/camera_utils/: camera_feed.py  general.py
src/video_jawn/static/: index.html  live.html
tests/: test_camera_feed.py
