[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-jawn"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Santino Pasquale", email = "spricatto@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Santino Pasquale/video-jawn#readme"
Issues = "https://github.com/Santino Pasquale/video-jawn/issues"
Source = "https://github.com/Santino Pasquale/video-jawn"

[tool.hatch.version]
path = "src/video_jawn/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/video_jawn tests}"

[tool.coverage.run]
source_pkgs = ["video_jawn", "tests"]
branch = true
parallel = true
omit = [
  "src/video_jawn/__about__.py",
]

[tool.coverage.paths]
video_jawn = ["src/video_jawn", "*/video-jawn/src/video_jawn"]
tests = ["tests", "*/video-jawn/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
